tests/negative/neg_unknown_imported_member.safe
-- Test: neg_unknown_imported_member
-- Description: Reject package-qualified references that are absent from the imported interface.
-- Expected: REJECT source_frontend_error

with Provider_Channel;

package Unknown_Imported_Member_Test

   task Sender

      loop
         send Provider_Channel.Unknown_Ch, 1;

